--- a/client/src/main/resources/gui/client/main.fxml
+++ b/client/src/main/resources/gui/client/main.fxml
@@ -24,7 +24,7 @@
 
     <HBox VBox.vgrow="ALWAYS">
         <fx:include fx:id="leftPanel" source="panel.fxml" HBox.hgrow="ALWAYS" />
-        <fx:include fx:id="rightPanel" source="panel.fxml" HBox.hgrow="ALWAYS" />
+        <fx:include fx:id="rightPanel" source="server.fxml" HBox.hgrow="ALWAYS" />
     </HBox>
 
     
